Fix: HTML white spaces

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,8 +35,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-content: space-between;
-    /* border: 1px solid; */
+    /* align-content: space-between;
+    border: 1px solid; */
   }
 
   /*---------------Top Content-----------*/
@@ -80,13 +80,14 @@
   .rating-element {
     display: flex;
     align-items: center;
-    justify-content: left;
+    /* justify-content: ; */ 
     padding: 15px;
     border-radius: 15px;
     width: 500px;
     color: hsl(300, 43%, 22%);
     font-weight: 700;
     font-size: 13px;
+    background-color: hsl(300, 24%, 96%);
   }
 
   .rating-element p {
@@ -169,7 +170,6 @@
   .card3 .prof-pic {
     margin-top: 3px;
   }
-
   .status {
     color: #ee68a4;
     font-size: 13px;
@@ -224,8 +224,6 @@
   }
 
   body {
-    background-image: url(images/bg-pattern-top-mobile.svg),
-      url(images/bg-pattern-bottom-mobile.svg);
     background-repeat: no-repeat;
     background-position: top left, bottom right;
     font-family: "Spartan", sans-serif;
